# vRain-rust

./: Cargo.toml  LICENSE  README.md  build.rs  config.json
src/: config.rs  main.rs  main.slint  pdfoption.rs  utils.rs
src/ui/: bluebutton.slint  main.slint  makefile.slint  styles.slint
text/: 001.txt
